[tool.poetry]
name = "voise-assistent"
version = "0.1.0"
description = ""
authors = ["TregubovMU <mtregubov@sfedu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
speechrecognition = "^3.10.1"
pyttsx3 = "^2.90"
fuzzywuzzy = "^0.18.0"
wikipedia = "^1.4.0"
pyowm = "^3.3.0"
translate = "^3.6.1"
web-browser = "^0.0.1"
python-levenshtein = "^0.23.0"
pyaudio = "^0.2.14"
textwrap3 = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
